# raspberry-pi-fun

./: CLAUDE.md
camera-ai/: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements-pi.txt  requirements.txt
camera-ai/backend/: config.py  main.py
camera-ai/backend/access/: models.py  storage.py
camera-ai/backend/camera/: base.py  factory.py  picamera.py  webcam.py
camera-ai/backend/detection/: face_detector.py
camera-ai/backend/gpio/: base.py  factory.py  mock.py  rpi.py
camera-ai/backend/recognition/: base.py  dlib_recogniser.py  factory.py  mock_recogniser.py  models.py  store.py
camera-ai/backend/routers/: access.py  staff.py  video.py
camera-ai/backend/streaming/: mjpeg.py
camera-ai/docs/: backend.md  frontend.md
camera-ai/docs/system-designs/access-code-management/: backend-design.md  frontend-design.md
camera-ai/docs/system-designs/facial-recognition/: backend-design.md  frontend-design.md
camera-ai/frontend/: angular.json  jest.config.js  package-lock.json  package.json  tsconfig.spec.json
camera-ai/frontend/src/: custom-theme.scss  styles.css
camera-ai/frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
camera-ai/frontend/src/app/dashboard/: dashboard.component.css  dashboard.component.spec.ts  dashboard.component.ts
camera-ai/scripts/: build.sh  deploy.sh  setup-dev.sh  setup-pi.sh
camera-ai/tests/: conftest.py  test_access_api.py  test_models.py  test_recognition.py  test_recognition_store.py  test_staff_api.py  test_storage.py
(+23 files in other folders)
