[project]
name = "camera-ai"
version = "0.1.0"
description = "AI-powered camera with face detection for Raspberry Pi"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "opencv-python-headless>=4.10.0",
    "pydantic-settings>=2.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
pi = [
    "picamera2>=0.3.25",
]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
